@@ -1,3 +1,9 @@
+2025-04-06  Wolfgang Lux  <wolfgang.lux@gmail.com>
+
+    * STBlock.m (value:, value:value:, value:value:value:value:,
+    valueWithArgs:): Prevent exception when one of the arguments of the
+    value methods is nil.
+
 2019-03-27  Wolfgang Lux  <wolfgang.lux@gmail.com>
 
     * STBytecodeInterpreter.m (dispatchBytecode:):
